--- a/DockerFile
+++ b/DockerFile
@@ -1,36 +1,30 @@
-# From - https://medium.com/@lilnya79/building-jenkins-image-with-docker-cli-preinstalled-for-seamless-devops-integration-ec185f76755b
 # Use Jenkins base image
 FROM jenkins/jenkins:latest
 
-# Prereqs for Terraform
-RUN wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
-RUN echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list
+# Switch to root user
+USER root
 
-# Update package lists and install useful tools
+# Update package lists, install necessary tools, and the lsb-release utility
 RUN apt-get update && \
-    apt-get install -y sudo vim curl wget docker.io
+    apt-get install -y sudo vim curl wget lsb-release gnupg software-properties-common && \
+    rm -rf /var/lib/apt/lists/*
+
+# Set root password
+# RUN echo 'root:abc123' | chpasswd
 
 # Install Terraform
-RUN apt-get update && sudo apt install terraform
+RUN wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg && \
+    echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/hashicorp.list && \
+    apt-get update && apt-get install -y terraform && \
+    rm -rf /var/lib/apt/lists/*
 
-# Add jenkins user to sudoers
+# Add Jenkins user to sudoers
 RUN echo "jenkins ALL=(ALL) NOPASSWD:ALL" >> /etc/sudoers
 
 # Install Docker CLI
-RUN apt-get update && \
-    apt-get install -y apt-transport-https \
-                       ca-certificates \
-                       gnupg2 \
-                       software-properties-common && \
-    curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /etc/apt/trusted.gpg.d/docker.gpg && \
-    add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable" && \
-    apt-get update && \
-    apt-get install -y docker-ce-cli
+RUN curl -fsSL https://get.docker.com | sh
 
-# Create the Docker Group
-RUN groupadd docker
-
-# Add Jenkins User to Docker Group
+# Add Jenkins user to Docker
 RUN usermod -aG docker jenkins
 
 # Switch back to the Jenkins user
